objects/MedicalProcedure__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountedPriceTEXT__c</fullName>
        <formula>TEXT( DiscountedPrice__c )</formula>
        <label>DiscountedPriceTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountedPrice__c</fullName>
        <formula>HospitaProcedurePrice__c * ( InsuranceCompanyDiscount__c / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DiscountedPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HospitaProcedurePrice__c</fullName>
        <label>HospitalProcedurePrice</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HospitalAddress__c</fullName>
        <formula>Hospital__r.Hospital_Full_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HospitalAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalProcedurePriceTEXT__c</fullName>
        <formula>TEXT( HospitaProcedurePrice__c)</formula>
        <label>HospitalProcedurePriceTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>MedicalProcedures</relationshipLabel>
        <relationshipName>MedicalProcedures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InsuranceCompanyDiscountTEXT__c</fullName>
        <formula>TEXT( InsuranceCompanyDiscount__c )</formula>
        <label>InsuranceCompanyDiscountTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCompanyDiscount__c</fullName>
        <label>InsuranceCompanyDiscount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InsuranceCompany__c</fullName>
        <label>InsuranceCompany</label>
        <referenceTo>InsuranceCompany__c</referenceTo>
        <relationshipLabel>MedicalProcedures</relationshipLabel>
        <relationshipName>MedicalProcedures</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProcedureLatitude__c</fullName>
        <formula>Hospital__r.Hospital_Latitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProcedureLatitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcedureLongitude__c</fullName>
        <formula>Hospital__r.Hospital_Longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProcedureLongitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcedureName__c</fullName>
        <label>ProcedureName</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProcedureRanking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProcedureRanking</label>
        <referenceTo>Ranking__c</referenceTo>
        <relationshipLabel>MedicalProcedures</relationshipLabel>
        <relationshipName>MedicalProcedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TemporaryDistanceText__c</fullName>
        <label>TemporaryDistanceText</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zipcode__c</fullName>
        <formula>Hospital__r.Hospital_Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zipcode</label>
        <type>Text</type>
    </fields>
    <label>MedicalProcedure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{00000000}</displayFormat>
        <label>MedicalProcedure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedicalProcedures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>